# ffmpeg-python

./: CMakeLists.txt  README.md  library.cpp  library.h  main.cpp  test.cpp
